Fix the gappyness

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,6 @@
+$block-spacing: 0.8rem !important;
+
+//noinspection CssUnknownTarget
 @import "bulma/bulma.sass";
 
 @import url('https://fonts.googleapis.com/css2?family=Proza+Libre:ital,wght@0,400;0,500;0,600;0,700;0,800;1,400;1,500;1,600;1,700;1,800&display=swap');
@@ -27,4 +30,8 @@ html, body {
 
 .rec-dot.rec-dot_active {
   background-color: black !important;
+}
+
+.title:not(.is-spaced) + .subtitle {
+  margin: unset !important;
 }
